Move skills to bottom, debug doesn't show on IE, flexbox to ensure perfect margins, fluid auto-drops list headers.

--- a/style.less
+++ b/style.less
@@ -2,7 +2,7 @@
 @debug: false;
 @force-print: false;
 @line-height: 1.5em;
-@block-spacing: 0.7em;
+@fluid-block-spacing: 0.7em;
 @thing-spacing: 1.10em;
 
 .clearfix() {
@@ -35,7 +35,11 @@ body {
 }
 
 .page {
-   display: inline-block;
+   &:not(#debug_page) {
+      display: flex;
+   }
+   flex-direction: column;
+   justify-content: space-between;
    width: 8.5in;
    height: 11in;
    margin: 0 @page_spacing @page_spacing 0;
@@ -62,7 +66,6 @@ body {
 
 .resume-block {
    &:not(:last-child) {
-      margin-bottom: @block-spacing;
    }
 
    > h1 {
@@ -253,6 +256,8 @@ body {
    }
 
    .page {
+      display: block;
+
       padding: 0 0.3in !important;
       &:first-of-type { padding-top: 0.3in !important; }
       &:last-of-type { padding-bottom: 0.3in !important; }
@@ -265,8 +270,12 @@ body {
       height: inherit;
    }
 
+   .resume-block {
+      margin-bottom: @fluid-block-spacing;
+   }
+
    .thing {
-      &:not(:last-of-type) {
+      &:not(:last-child) {
          margin-bottom: 1.5em !important;
       }
       header {
@@ -303,25 +312,21 @@ body {
             li:not(:last-of-type) { margin-bottom: 0.3em; }
          }
 
+         li {
+            display: block !important;
+            &:before {
+               position: absolute !important;
+            }
+            h2 {
+               display: inline !important;
+            }
+         }
+
          .hack-right {
             position: static !important;
             float: none !important;
             display: block !important;
             padding-left: 2em;
-         }
-      }
-   }
-}
-
-@media only screen and (max-width : 4.7in) {
-   .thing {
-      li {
-         display: block !important;
-         &:before {
-            position: absolute !important;
-         }
-         h2 {
-            display: inline !important;
          }
       }
    }
